# bitnet-toy

./: .gitignore  Cargo.toml  README.md  deny.toml
docs/: ARCHITECTURE.md  TRAINING.md
src/: attention.rs  autograd.rs  bitlinear.rs  block.rs  bpe.rs  cuda.rs  data.rs  device.rs  export.rs  ffn.rs  inference.rs  inference_kv.rs  main.rs  model.rs  optim.rs  tensor.rs
